set logo using background-image contain instead of an img tag. prevents squish.

--- a/templates/wpcc_style.1.2.1.less
+++ b/templates/wpcc_style.1.2.1.less
@@ -54,6 +54,8 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 320px;
     align-items: center;
     padding: 10px;
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 
   
